@@ -12,6 +12,10 @@ What's New in Python 3.1.1?
 Core and Builtins
 -----------------
 
+- Issue #6347: Include inttypes.h as well as stdint.h in pyport.h.
+  This fixes a build failure on HP-UX: int32_t and uint32_t are
+  defined in inttypes.h instead of stdint.h on that platform.
+
 - Issue #6373: Fixed a RuntimeError when encoding with the latin-1 codec and
   the 'surrogateescape' error handler, a string which contains unpaired
   surrogates.
